...
                                <rect key="frame" x="0.0" y="64" width="375" height="45"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="TBa-ug-okr"/>
                                </constraints>
                                <segments>
                                    <segment title="All"/>
                                    <segment title="Favourite"/>
                                </segments>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <connections>
                                    <action selector="segmentDidChanged:" destination="DjU-Jn-KbL" eventType="valueChanged" id="p1v-sb-JqU"/>
                                </connections>
                            </segmentedControl>
...
                            <constraint firstItem="rUD-DK-em9" firstAttribute="top" secondItem="Nc1-TV-3wA" secondAttribute="bottom" constant="5" id="lha-BU-czl"/>
                            <constraint firstItem="Nc1-TV-3wA" firstAttribute="top" secondItem="Agv-NR-7Ar" secondAttribute="top" id="xoT-uA-K2I"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Agv-NR-7Ar"/>
                    </view>
                    <navigationItem key="navigationItem" id="A9i-u5-TpC">
                        <barButtonItem key="rightBarButtonItem" title="Sort" id="LCz-Ma-SWA">
                            <connections>
                                <action selector="sortItem:" destination="DjU-Jn-KbL" id="OqR-ey-Ird"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
